# Projeto-Contrato-de-Dados

./: README.md  mkdocs.yml  pyproject.toml
app/: funcao.py
docs/: index.md
tests/: teste_funcao.py
